; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/d3dcompiler_43/extr_asm.c_failure_test.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/d3dcompiler_43/extr_asm.c_failure_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [47 x i8] c"ps_3_0\0Adcl_2d s2\0Atexldd_x2 r0, v1, s2, v3, v4\0A\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"vs.1.1\0D\0Aadd r0.rgb, r0, r1\0A+add r0.a, r0, r2\0A\00", align 1
@.str.2 = private unnamed_addr constant [62 x i8] c"ps_2_0\0Atexld r0, t0, s0\0Aadd r0.rgb, r0, r1\0A+add r0.a, r0, v1\0A\00", align 1
@.str.3 = private unnamed_addr constant [28 x i8] c"vs_1_1\0A(p0) add r0, r0, v0\0A\00", align 1
@.str.4 = private unnamed_addr constant [29 x i8] c"ps_3_0\0Amov r0, v[ a0 + 12 ]\0A\00", align 1
@.str.5 = private unnamed_addr constant [19 x i8] c"vs_1_1\0Amov r0, s0\0A\00", align 1
@.str.6 = private unnamed_addr constant [31 x i8] c"ps_3_0\0Amov r0, v[ aL.x + 12 ]\0A\00", align 1
@.str.7 = private unnamed_addr constant [44 x i8] c"ps_3_0\0Adcl_2d s2\0Atexldd r0, t1, s2, v3, v4\0A\00", align 1
@.str.8 = private unnamed_addr constant [25 x i8] c"ps_1_3\0Amov_x2_x2 r0, r1\0A\00", align 1
@.str.9 = private unnamed_addr constant [23 x i8] c"vs_1_1\0Amov r0, r1, r2\0A\00", align 1
@.str.10 = private unnamed_addr constant [25 x i8] c"ps_1_4\0Atexld r5, -r2_dz\0A\00", align 1
@.str.11 = private unnamed_addr constant [23 x i8] c"ps_2_0\0Amov r2, 1 - r0\0A\00", align 1
@.str.12 = private unnamed_addr constant [23 x i8] c"vs_3_0\0Amov r2, 2 - r0\0A\00", align 1
@.str.13 = private unnamed_addr constant [30 x i8] c"vs_3_0\0Amov r2, c[ aL + 3.4 ]\0A\00", align 1
@.str.14 = private unnamed_addr constant [23 x i8] c"vs_3_0\0Amov r2, 1 - r1\0A\00", align 1
@.str.15 = private unnamed_addr constant [22 x i8] c"vs_1_1\0Amov r2, r1_x2\0A\00", align 1
@.str.16 = private unnamed_addr constant [23 x i8] c"vs_1_1\0Amov r2, r1_abs\0A\00", align 1
@.str.17 = private unnamed_addr constant [22 x i8] c"ps_2_0\0Amov r0, r1_x2\0A\00", align 1
@.str.18 = private unnamed_addr constant [24 x i8] c"vs_2_0\0Amov r0, r1.abcd\0A\00", align 1
@.str.19 = private unnamed_addr constant [25 x i8] c"vs_2_0\0Amov r0, r1.xyzwx\0A\00", align 1
@.str.20 = private unnamed_addr constant [20 x i8] c"vs_2_0\0Amov r0, r1.\0A\00", align 1
@.str.21 = private unnamed_addr constant [24 x i8] c"vs_2_0\0Amov r0.xxyz, r1\0A\00", align 1
@.str.22 = private unnamed_addr constant [19 x i8] c"ps_1_3\0Amov r5, r0\0A\00", align 1
@.str.23 = private unnamed_addr constant [25 x i8] c"ps_3_0\0Adcl_positiont o0\0A\00", align 1
@.str.24 = private unnamed_addr constant [26 x i8] c"vs_3_0\0Aadd_pp r0, r0, r1\0A\00", align 1
@.str.25 = private unnamed_addr constant [26 x i8] c"ps_3_0\0Aadd_x4 r0, r0, r1\0A\00", align 1
@.str.26 = private unnamed_addr constant [24 x i8] c"ps_1_3\0Aadd oC0, r0, r1\0A\00", align 1
@.str.27 = private unnamed_addr constant [24 x i8] c"ps_3_0\0Aadd oC4, r0, r1\0A\00", align 1
@.str.28 = private unnamed_addr constant [24 x i8] c"vs_3_0\0Aadd r0, r0, v17\0A\00", align 1
@.str.29 = private unnamed_addr constant [24 x i8] c"vs_3_0\0Aadd o13, r0, r1\0A\00", align 1
@.str.30 = private unnamed_addr constant [19 x i8] c"vs_3_0\0Acall l2048\0A\00", align 1
@.str.31 = private unnamed_addr constant [26 x i8] c"ps_3_0\0Atexld r0, r1, s20\0A\00", align 1
@.str.32 = private unnamed_addr constant [15 x i8] c"ps_1_3\0Atex t5\0A\00", align 1
@.str.33 = private unnamed_addr constant [31 x i8] c"vs_3_0\0Aadd r0, r0[ a0.x ], r1\0A\00", align 1
@.str.34 = private unnamed_addr constant [30 x i8] c"vs_2_0\0Aadd r0, v[ a0.x ], r1\0A\00", align 1
@.str.35 = private unnamed_addr constant [28 x i8] c"ps_2_0\0Aadd r0, v[ aL ], r1\0A\00", align 1
@.str.36 = private unnamed_addr constant [28 x i8] c"ps_2_0\0Aadd r0, v[ r0 ], r1\0A\00", align 1
@.str.37 = private unnamed_addr constant [30 x i8] c"ps_3_0\0Aadd r0, v[ a0.x ], r1\0A\00", align 1
@.str.38 = private unnamed_addr constant [25 x i8] c"vs_1_1\0Amov r0, c0[ a0 ]\0A\00", align 1
@.str.39 = private unnamed_addr constant [29 x i8] c"ps_3_0\0Adcl_texcoord0_sat v0\0A\00", align 1
@.str.40 = private unnamed_addr constant [28 x i8] c"ps_3_0\0Adcl_texcoord0_x2 v0\0A\00", align 1
@.str.41 = private unnamed_addr constant [34 x i8] c"vs_3_0\0Adcl_texcoord0_centroid v0\0A\00", align 1
@.str.42 = private unnamed_addr constant [21 x i8] c"vs_3_0\0Adcl_2d_pp s0\0A\00", align 1
@.str.43 = private unnamed_addr constant [28 x i8] c"ps_2_0\0Atexm3x3vspec t3, t0\0A\00", align 1
@__const.failure_test.tests = private unnamed_addr constant [44 x i8*] [i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.30, i32 0, i32 0), i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.35, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.37, i32 0, i32 0), i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.38, i32 0, i32 0), i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.39, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.40, i32 0, i32 0), i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.41, i32 0, i32 0), i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.42, i32 0, i32 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.43, i32 0, i32 0)], align 16
@D3DCOMPILE_SKIP_VALIDATION = common dso_local global i32 0, align 4
@D3DXERR_INVALIDDATA = common dso_local global i32 0, align 4
@.str.44 = private unnamed_addr constant [95 x i8] c"Failure test, shader %d: expected D3DAssemble failure with D3DXERR_INVALIDDATA, got 0x%x - %d\0A\00", align 1
@.str.45 = private unnamed_addr constant [25 x i8] c"D3DAssemble messages:\0A%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @failure_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @failure_test() #0 {
  %1 = alloca [44 x i8*], align 16
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = bitcast [44 x i8*]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %7, i8* align 16 bitcast ([44 x i8*]* @__const.failure_test.tests to i8*), i64 352, i1 false)
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %54, %0
  %9 = load i32, i32* %3, align 4
  %10 = getelementptr inbounds [44 x i8*], [44 x i8*]* %1, i64 0, i64 0
  %11 = call i32 @ARRAY_SIZE(i8** %10)
  %12 = icmp ult i32 %9, %11
  br i1 %12, label %13, label %57

13:                                               ; preds = %8
  store i32* null, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %14 = load i32, i32* %3, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds [44 x i8*], [44 x i8*]* %1, i64 0, i64 %15
  %17 = load i8*, i8** %16, align 8
  %18 = load i32, i32* %3, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds [44 x i8*], [44 x i8*]* %1, i64 0, i64 %19
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @strlen(i8* %21)
  %23 = load i32, i32* @D3DCOMPILE_SKIP_VALIDATION, align 4
  %24 = call i32 @pD3DAssemble(i8* %17, i32 %22, i32* null, i32* null, i32* null, i32 %23, i32** %4, i32** %5)
  store i32 %24, i32* %2, align 4
  %25 = load i32, i32* %2, align 4
  %26 = load i32, i32* @D3DXERR_INVALIDDATA, align 4
  %27 = icmp eq i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* %2, align 4
  %31 = load i32, i32* %2, align 4
  %32 = and i32 %31, 65535
  %33 = call i32 @ok(i32 %28, i8* getelementptr inbounds ([95 x i8], [95 x i8]* @.str.44, i64 0, i64 0), i32 %29, i32 %30, i32 %32)
  %34 = load i32*, i32** %5, align 8
  %35 = icmp ne i32* %34, null
  br i1 %35, label %36, label %43

36:                                               ; preds = %13
  %37 = load i32*, i32** %5, align 8
  %38 = call i32* @ID3D10Blob_GetBufferPointer(i32* %37)
  %39 = bitcast i32* %38 to i8*
  %40 = call i32 @trace(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.45, i64 0, i64 0), i8* %39)
  %41 = load i32*, i32** %5, align 8
  %42 = call i32 @ID3D10Blob_Release(i32* %41)
  br label %43

43:                                               ; preds = %36, %13
  %44 = load i32*, i32** %4, align 8
  %45 = icmp ne i32* %44, null
  br i1 %45, label %46, label %53

46:                                               ; preds = %43
  %47 = load i32*, i32** %4, align 8
  %48 = call i32* @ID3D10Blob_GetBufferPointer(i32* %47)
  store i32* %48, i32** %6, align 8
  %49 = load i32*, i32** %6, align 8
  %50 = call i32 @dump_shader(i32* %49)
  %51 = load i32*, i32** %4, align 8
  %52 = call i32 @ID3D10Blob_Release(i32* %51)
  br label %53

53:                                               ; preds = %46, %43
  br label %54

54:                                               ; preds = %53
  %55 = load i32, i32* %3, align 4
  %56 = add i32 %55, 1
  store i32 %56, i32* %3, align 4
  br label %8

57:                                               ; preds = %8
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @ARRAY_SIZE(i8**) #2

declare dso_local i32 @pD3DAssemble(i8*, i32, i32*, i32*, i32*, i32, i32**, i32**) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @ok(i32, i8*, i32, i32, i32) #2

declare dso_local i32 @trace(i8*, i8*) #2

declare dso_local i32* @ID3D10Blob_GetBufferPointer(i32*) #2

declare dso_local i32 @ID3D10Blob_Release(i32*) #2

declare dso_local i32 @dump_shader(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
